<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProPortion</string>
    <string name="nav_home">Home</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_shopping">Shopping</string>
    <string name="nav_settings">Settings</string>
</resources>
